# arbitrage-bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.redeemer.yml  docker-compose.yml
redeemer/: Cargo.toml  Dockerfile
redeemer/src/: main.rs
src/: main.rs
src/config/: constants.rs  env.rs
src/services/: approvals.rs  arbitrage_executor.rs  chain_reader.rs  create_clob_client.rs  market_discovery.rs  mod.rs  persistent_state.rs  price_monitor.rs  redeemer.rs  velocity.rs  websocket_client.rs
src/utils/: logger.rs  mod.rs  telegram.rs
