[package]
name = "polymarket-redeemer"
version = "0.1.0"
edition = "2021"
description = "Redeem resolved Polymarket CTF positions"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
colored = "2.0"
hex = "0.4"
alloy = { version = "1", features = ["signer-local", "network", "rpc-types", "provider-http", "consensus"] }
url = "2"
